Created TC view
Added Trusted Circle view, moved Curator view

--- a/Curator View/skeleton.html
+++ b/Curator View/skeleton.html
@@ -13,9 +13,9 @@
   <body>
 
     <h1>Curator View</h1>
-    <p><img src="images/TCmembership.jpg" alt="Placeholder1"></p>
+    <img src="images/TCmembership.jpg" alt="Placeholder1"><br>
     <form action="">
-      <label for="TCmemb">Choose a Trusted Circle Member:</label>
+      <label for="TCmemb">Choose a Trusted Circle Member:</label><br>
       <select id="TCmemb" name="TCmemb">
         <option value="TCmemb1">Friend</option>
         <option value="TCmemb2">Brother</option>
@@ -23,8 +23,8 @@
       </select>
       <input type="button" value="Add" onclick="alert('Added Trusted Circle Member')">
       <input type="button" value="Remove" onclick="alert('Removed Trusted Circle Member')">
-    </form>
-    <p><img src="images/ElderContent.jpg" alt="Placeholder2"></p>
+    </form><br><br>
+    <img src="images/ElderContent.jpg" alt="Placeholder2"><br>
     <img src="images/ControlPanel.jpg" alt="Placeholder3">
 
   </body>
