small edit to skeletons HTMLs

--- a/Trusted Circle view/skeleton.html
+++ b/Trusted Circle view/skeleton.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-UK">
   <head>
-
     <meta charset="utf-8">
     <meta name="author" content="Michael Makarenko">
     <meta name="description" content="The Trusted Circle View aims to display all necessary information and provide
