Added CSS to trusted_circle.html

--- a/CuratorView/curator.html
+++ b/CuratorView/curator.html
@@ -17,7 +17,7 @@
 
     <h1 class="cvTitle">Curator View</h1>
     <br>
-    <div class="toprow">
+    <div class="cvtoprow">
       <img src="images/TCmembership.jpg" alt="Placeholder1">
       <br>
       <form action="">
@@ -32,7 +32,7 @@
         <input class="RemBtn" type="button" value="Remove" onclick="alert('Removed Trusted Circle Member')">
       </form>
     </div>
-    <div class="toprow">
+    <div class="cvtoprow">
     <img class="cvContent" src="images/ElderContent.jpg" alt="Placeholder2">
     </div>
     <br>
