updated curator and trusted circle views

--- a/CuratorView/curator.html
+++ b/CuratorView/curator.html
@@ -3,7 +3,7 @@
   <head>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="temp.css" rel="stylesheet">
+    <link href="curator.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="author" content="Michael Makarenko">
     <meta name="description"
@@ -15,8 +15,9 @@
   </head>
   <body>
 
-    <h1 class="cvTitle">Curator View</h1>
+    <h1>Curator View</h1>
     <br>
+
     <div class="cvtoprow">
       <img src="images/TCmembership.jpg" alt="Placeholder1">
       <br>
@@ -32,10 +33,12 @@
         <input class="RemBtn" type="button" value="Remove" onclick="alert('Removed Trusted Circle Member')">
       </form>
     </div>
+
     <div class="cvtoprow">
     <img class="cvContent" src="images/ElderContent.jpg" alt="Placeholder2">
     </div>
     <br>
+    
     <img class="cvPanel" src="images/ControlPanel.jpg" alt="Placeholder3">
 
   </body>
