--- a/TrustedCircleView/trusted_circle.html
+++ b/TrustedCircleView/trusted_circle.html
@@ -3,7 +3,7 @@
   <head>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="temp.css" rel="stylesheet">
+    <link href="trusted_circle.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="authors" content="Michael Makarenko, ">
     <meta name="description" content="The Trusted Circle View aims to display all necessary information and provide
@@ -14,19 +14,31 @@
   </head>
   <body>
 
-    <h1 class="tcvTitle">Trusted Circle View</h1>
+    <h1>Trusted Circle View</h1>
+
     <img class="tcVid" src="images/TCvideo.jpg" alt="Placeholder1">
     <br>
-    <div class="tcvbotrow">
-      <h2 class="tcvHeader">Reminders</h2>
-      <form action="">
-        <label for="newreminder">Add a reminder:</label>
+    <div class="RemMsg">
+      <div class="RemT">
+        <h2>Reminders</h2>
+        <img src="images/TCtext.jpg" alt="Placeholder2">
         <br>
-        <input class="txtbox" type="text" id="newreminder" name="newreminder">
-        <input class="AddBtn" type="button" value="Add" onclick="alert('Added Reminder')">
-      </form>
+      </div>
+
+      <div class="MsgT">
+        <h2>Messages</h2>
+        <img src="images/TCtext.jpg" alt="Placeholder3">
+      </div>
       <br>
-      <form action="">
+
+      <div class="RemB">
+        <form action="">
+          <label for="newreminder">Add a reminder:</label>
+          <br>
+          <input class="txtbox" type="text" id="newreminder" name="newreminder">
+          <input class="AddBtn" type="button" value="Add" onclick="alert('Added Reminder')">
+        </form>
+        <form action="">
           <label for="reminder">Remove a reminder:</label>
           <br>
           <select class="rmndrList" id="reminder" name="reminder">
@@ -34,13 +46,18 @@
             <option value="reminder2">Max visits tomorrow</option>
           </select>
           <input class="RemBtn" type="button" value="Remove" onclick="alert('Removed Reminder')">
-      </form>
-      <br>
-      <img src="images/TCtext.jpg" alt="Placeholder2">
+        </form>
+      </div>
+
+      <div class="MsgB">
+        <form action="">
+          <label for="newmsg">Send a message:</label>
+          <br>
+          <input class="txtbox" type="text" id="newreminder" name="newreminder">
+          <input class="SndBtn" type="button" value="Send" onclick="alert('Message Sent')">
+        </form>
+      </div>
     </div>
-    <div class="tcvbotrow">
-      <h2 class="tcvHeader">Messages</h2>
-      <img src="images/TCtext.jpg" alt="Placeholder3">
-    </div>
+
   </body>
 </html>
