Added JS placeholders
Improved overall design of trusted_circle and curator files. Added JS-based interactive placeholders for showing potential Reminders and Trusted Circle list functionality

--- a/TrustedCircleView/trusted_circle.html
+++ b/TrustedCircleView/trusted_circle.html
@@ -4,12 +4,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="trusted_circle.css" rel="stylesheet">
+    <script src="trusted_circle.js" defer></script>
     <meta charset="utf-8">
     <meta name="authors" content="Michael Makarenko, ">
     <meta name="description" content="The Trusted Circle View aims to display all necessary information and provide
     funcionality for members of the Elderly Person's Trusted Circle.">
     
-    <title>InformaTV</title>
+    <title>InformaTV: Trusted Circle</title>
 
   </head>
   <body>
@@ -19,45 +20,35 @@
     <img class="tcVid" src="images/TCvideo.jpg" alt="Placeholder1">
     <br>
     <div class="RemMsg">
-      <div class="RemT">
-        <h2>Reminders</h2>
-        <img src="images/TCtext.jpg" alt="Placeholder2">
-        <br>
+    
+      <div class="Reminders">
+        <div id="RemListTop" class="listHeader">
+          <h2>Reminders</h2>
+          <input type="text" id="NewRem" placeholder="Reminder">
+          <span onclick="newElement()" class="Add">Add</span>
+        </div>
+
+        <ul id="RemList">
+          <li>Call Linda</li>
+          <li>Max visits tomorrow</li>
+        </ul>
       </div>
 
-      <div class="MsgT">
-        <h2>Messages</h2>
-        <img src="images/TCtext.jpg" alt="Placeholder3">
-      </div>
-      <br>
+      <div class="Messages">
+        <div class="MsgT">
+          <h2>Messages</h2>
+          <img src="images/TCtext.jpg" alt="Placeholder3">
+        </div>
 
-      <div class="RemB">
-        <form action="">
-          <label for="newreminder">Add a reminder:</label>
-          <br>
-          <input class="txtbox" type="text" id="newreminder" name="newreminder">
-          <input class="AddBtn" type="button" value="Add" onclick="alert('Added Reminder')">
-        </form>
-        <form action="">
-          <label for="reminder">Remove a reminder:</label>
-          <br>
-          <select class="rmndrList" id="reminder" name="reminder">
-            <option value="reminder1">Call Linda</option>
-            <option value="reminder2">Max visits tomorrow</option>
-          </select>
-          <input class="RemBtn" type="button" value="Remove" onclick="alert('Removed Reminder')">
-        </form>
-      </div>
-
-      <div class="MsgB">
-        <form action="">
-          <label for="newmsg">Send a message:</label>
-          <br>
-          <input class="txtbox" type="text" id="newreminder" name="newreminder">
-          <input class="SndBtn" type="button" value="Send" onclick="alert('Message Sent')">
-        </form>
+        <div class="MsgB">
+          <form action="">
+            <label for="newmsg">Send a message:</label>
+            <br>
+            <input class="txtbox" type="text" id="newreminder" name="newreminder">
+            <input class="SndBtn" type="button" value="Send" onclick="alert('Message Sent')">
+          </form>
+        </div>
       </div>
     </div>
-
   </body>
 </html>
