--- a/Single_View/trusted_circle.html
+++ b/Single_View/trusted_circle.html
@@ -19,7 +19,8 @@
     <h1>Trusted Circle View</h1>
 
     <!--video content currently seen by Elderly Person-->
-    <img class="tcVid" src="images/TCvideo.jpg" alt="Placeholder1">
+    <iframe class="TCvid" width="517" height="221" src="https://www.youtube.com/embed/iik25wqIuFo" frameborder="0" allowfullscreen></iframe>
+    <!--<img class="tcVid" src="images/TCvideo.jpg" alt="Placeholder1">-->
     <br>
     <!--Reminders & Messages-->
     <div class="RemMsg">
