--- a/Single_View/index.html
+++ b/Single_View/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="index" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link href="styles.css" rel="stylesheet"><!--CSS-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>InformaTV</title>
   </head>
   <body>
     <div id="root"></div>
-    <button>Hello World</button>
+    <h1>Welcome</h1>
+    <br>
+    <br>
+    <a href="elderlypersonview.html"><button>Elderly Person View</button></a>
+    <br>
+    <br>
+    <a href="trusted_circle.html"><button>Trusted Circle View</button></a>
+    <br>
+    <br>
+    <a href="curator.html"><button>Curator View</button></a>
   </body>
 </html>
